--- a/workshop.html
+++ b/workshop.html
@@ -15,11 +15,11 @@ title: Laravel 5.5 Primer: dalle basi al deploy
 
   <div class="row row--2">
     <p class="row__column">
-      Lo scopo di questo workshop è quello di avvicinare sviluppatori PHP a Laravel. Durante il corso verrà analizzato il framework dalle sue basi per arrivare a sviluppare una piccola applicazione API-driven.
+      Lo scopo di questo workshop è quello di avvicinare sviluppatori PHP a Laravel. Durante il corso verrà analizzato il framework dalle sue basi per arrivare a sviluppare una piccola applicazione API-driven.<br>
+      Laravel 5.5, ultima versione appena rilasciata, ha diverse funzionalità incluse di default per facilitare il processo di sviluppo e precedentemente esterne, come Fractal, per trasformare l'output e formattarlo correttamente per usarlo con framework JS come React o Vue.js.<br>
     </p>
 
     <p class="row__column">
-      Laravel 5.5, ultima versione appena rilasciata, ha diverse funzionalità incluse di default per facilitare il processo di sviluppo e precedentemente esterne, come Fractal, per trasformare l'output e formattarlo correttamente per usarlo con framework JS come React o Vue.js.<br>
       Utilizzeremo questi nuovi strumenti, in un processo guidato di apprendimento, insieme al package Mega Make (https://github.com/chrispecoraro/mega-make), per automatizzare la creazione della nostra applicazione RESTful.<br>
       Infine esamineremo in dettaglio, ogni singolo aspetto del sistema di API interno di Laravel.
     </p>
