--- a/workshop.html
+++ b/workshop.html
@@ -20,7 +20,7 @@ title: Laravel 5.5 Primer: dalle basi al deploy
     </p>
 
     <p class="row__column">
-      Utilizzeremo questi nuovi strumenti, in un processo guidato di apprendimento, insieme al package Mega Make (https://github.com/chrispecoraro/mega-make), per automatizzare la creazione della nostra applicazione RESTful.<br>
+      Utilizzeremo questi nuovi strumenti, in un processo guidato di apprendimento, insieme al package <a href="https://github.com/chrispecoraro/mega-make">Mega Make</a>, per automatizzare la creazione della nostra applicazione RESTful.<br>
       Infine esamineremo in dettaglio, ogni singolo aspetto del sistema di API interno di Laravel.
     </p>
 
@@ -44,7 +44,6 @@ title: Laravel 5.5 Primer: dalle basi al deploy
         <li>Artisan</li>
         <li>Dusk</li>
         <li>Passport</li>
-        <li></li>
       </ol>
 
       Introduzione ed utilizzo dei principali componenti Laravel:
