--- a/talks.html
+++ b/talks.html
@@ -14,7 +14,7 @@ title: Talks
 
   <div class="talks-intro">
     <h2 class="talks-intro__date">
-      Marzo 17
+      Dicembre 1
     </h2>
   </div>
 
